--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
                         </div>
 
 
+	      
+	      <a class="button" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Practicum</a><br>
       </span>
       <h4><b>Fleet Management System deisgned for Baltimore City</b></h4>
       <h6><b>Designed by Akshay Nagar and Miaoyan Zhang</b></h6>
