--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
 	      
-	      <a class="button" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Practicum</a><br>
+	      <a class="button" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Musa Website</a><br>
       </span>
       <h4><b>Fleet Management System deisgned for Baltimore City</b></h4>
       <h6><b>Designed by Akshay Nagar and Miaoyan Zhang</b></h6>
