--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
 	      
-	      <a class="button" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Musa Website</a><br>
+	      <a class="btn btn-primary" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Musa Website</a><br>
       </span>
       <h4><b>Fleet Management System deisgned for Baltimore City</b></h4>
       <h6><b>Designed by Akshay Nagar and Miaoyan Zhang</b></h6>
@@ -215,7 +215,7 @@
       <h5 id="date"></h5>
 			<h5 class="m-t-1">Savings This year: <span class="tag tag-success" id="revenue-tag">$1,200,657</span></h5>
 			<hr class="m-t-2">
-      <a class="button" href="mappingbalt.html" role="button">CCTV Mapping</a><br>
+      
 
 
 
