--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
 
 
-	      
+
 	      <a class="btn btn-primary" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Musa Website</a><br>
       </span>
       <h4><b>Fleet Management System deisgned for Baltimore City</b></h4>
@@ -215,7 +215,7 @@
       <h5 id="date"></h5>
 			<h5 class="m-t-1">Savings This year: <span class="tag tag-success" id="revenue-tag">$1,200,657</span></h5>
 			<hr class="m-t-2">
-      
+
 
 
 
@@ -294,7 +294,7 @@
 
 			<hr>
 
-			<h3>Comeback vs Regular (Department)</h3>
+			<h3 id="vehicle_plot">Comeback vs Regular (Department)</h3>
 
 			<!-- users doughnut and spline chart -->
 			<div class="row">
