--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         }
 
         </style>
-<style>
+        <style>
                 /* Popup container */
                 .popup {
                   position: relative;
@@ -267,7 +267,7 @@
 
 	      <a class="btn btn-primary" href="https://pennmusa.github.io/MUSA_801.io/" role="button">Musa Website</a><br>
       </span>
-      <h4><b>Fleet Management System deisgned for Baltimore City</b></h4>
+      <h4><b>Fleet Management System designed for Baltimore City</b></h4>
       <h6><b>Designed by Akshay Nagar and Miaoyan Zhang</b></h6>
 
 
@@ -385,6 +385,15 @@
       </span>
 			<!-- users doughnut and spline chart -->
 			<div class="row">
+				<div class="col-lg-3 col-md-4">
+					<div class="inview" id="users-doughnut-chart"></div>
+				</div>
+
+				<div class="col-lg-9 col-md-8">
+					<div class="inview" id="users-spline-chart"></div>
+				</div>
+			</div>
+			<!-- row users doughnut and spline chart -->
 
 			<hr>
 
