--- a/index.html
+++ b/index.html
@@ -359,30 +359,38 @@
 
 			<hr>
 
-			<h3 id="vehicle_plot">Comeback vs Regular (Department)</h3>
-      <span style="float:right">
-            <div class="popup" onclick="myFunction()">
-                    <p>
+      <div class="row">
+				<div class="col-md-8">
+          <h3 id="vehicle_plot">Comeback vs Regular (Department)</h3>
+        </div>
+        <div class="col-md-4">
+          <span style="float:right">
+                <div class="popup" onclick="myFunction()">
+                        <p>
 
-                      <p>
-                        <!-- Button trigger modal -->
-                                <button type="button" id="b12" class="btn btn-primary">
-                                Information
-                              </button>
-              <span class="popuptext" id="myPopup">
-                                          <span style="color: white;">
-                                          Explanation of this section : This Section shows information about Comeback & Regular Trips for the department of the selected Vehicle<br><br>
-                                          <span style="color: #00c700;">This shows the Total Regular Trips as a percentage % and as per month in the each month for the department in Green</span><br><br>
-                                          <span style="color: #c70000;">This shows the Total Comeback Trips as a percetnage % and as per month in the each month for the department in Red </span>
-                                          </span>
+                          <p>
+                            <!-- Button trigger modal -->
+                                    <button type="button" id="b12" class="btn btn-primary">
+                                    Information
+                                  </button>
+                  <span class="popuptext" id="myPopup">
+                                              <span style="color: white;">
+                                              Explanation of this section : This Section shows information about Comeback & Regular Trips for the department of the selected Vehicle<br><br>
+                                              <span style="color: #00c700;">This shows the Total Regular Trips as a percentage % and as per month in the each month for the department in Green</span><br><br>
+                                              <span style="color: #c70000;">This shows the Total Comeback Trips as a percetnage % and as per month in the each month for the department in Red </span>
+                                              </span>
 
 
 
 
 
-              </span>
-                                        </div>
-      </span>
+                  </span>
+                                            </div>
+          </span>
+        </div>
+      </div>
+
+
 			<!-- users doughnut and spline chart -->
 			<div class="row">
 				<div class="col-lg-3 col-md-4">
