--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                               <span style="color: #222222;">
                               <b>This App is developed for Baltimore City Government Fleet Management Repair Deparment withing Department of General Services.
                               <p>
-				<br>Use Case Information : The objective of the app is to help mechanics reduce comebacks, 
-				 <br> when the app detects that chances of comeback are high, they can perform an extra layer of 30$ check
-				  <br>This can help in cost saving and saving valuable tax payer's money.The average comeback trip is 127$ more
-				   <br> than a comeback trip and the total spending on them is 57 million, our app will save a minimum of 5% on this.
+				Use Case Information : The objective of the app is to help mechanics reduce comebacks, 
+				when the app detects that chances of comeback are high, they can perform an extra layer of 30$ check
+				This can help in cost saving and saving valuable tax payer's money.The average comeback trip is 127$ more
+				than a comeback trip and the total spending on them is 57 million, our app will save a minimum of 5% on this.
 				<p>      
                               <br>Please pay attention to the following points while using the app :</b>
                               <br>1) Click on Vehicle ID box and start typing 0,1,8 or 9 then select the vehicel from the list (default is selected as 000036)
