--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                               <span style="color: #222222;">
                               <b>This App is developed for Baltimore City Government Fleet Management Repair Deparment withing Department of General Services.
                               <p><br><br>
-				Use Case Information : The objective of the app is to help Baltimore City General Repairs Departmetn and mechanics reduce comebacks, 
-				when the app detects that chances of comeback are high, they can perform an extra layer of 30$ check
+				Use Case Information : The objective of the app is to help Baltimore City Department of General Services and the repair mechanics reduce comebacks, 
+				when the app detects that chances of comeback are high, they can perform an extra layer of 30$ check.
 				This can help in cost saving and saving valuable tax payer's money.The average comeback trip is 127$ more
 				than a comeback trip and the total spending on them is 57 million, our app will save a minimum of 5% on this.
 				<p>      
