--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 				This can help in cost saving and saving valuable tax payer's money.The average comeback trip is 127$ more
 				than a comeback trip and the total spending on them is 57 million, our app will save a minimum of 5% on this.
 				<p>      
-                              <br>Please pay attention to the following points while using the app :</b>
+                              Please pay attention to the following points while using the app :</b>
                               <br>1) Click on Vehicle ID box and start typing 0,1,8 or 9 then select the vehicel from the list (default is selected as 000036)
                               <br>2) Click on CCTV Mapping to click see CCTV Mapping Data & Back to Application to come back to main page.
                               <br>3) On CCTV Mapping Page , select projects and click filter resutls to see results
