--- a/index.html
+++ b/index.html
@@ -245,18 +245,18 @@
                             </div>
                             <div class="modal-body">
                               <span style="color: #222222;">
-                              <b>This App is developed for Baltimore City Government Fleet Management Repair Deparment withing Department of General Services.
+                              b>This App is developed for Department of General Services of Baltimore City Government and their fleet repair & management team.
                               <p><br>
 				Use Case Information : The objective of the app is to help Baltimore City Department of General Services and the repair mechanics reduce comebacks, 
 				when the app detects that chances of comeback are high, they can perform an extra layer of 30$ check.
-				This can help in cost saving and saving valuable tax payer's money.The average comeback trip is 127$ more
+				This can help in cost saving and saving valuable tax payer's money. The average comeback trip is 127$ more
 				than a comeback trip and the total spending on them is 57 million, our app will save a minimum of 5% on this.
 				<p>      
                               Please pay attention to the following points while using the app :</b>
-                              <br>1) Click on Vehicle ID box and start typing 0,1,8 or 9 then select the vehicel from the list (default is selected as 000036)
+                              <br>1) Click on Vehicle ID box and start typing 0,1,8 or 9 then select the vehicle from the list (default is selected as 000036)
                               <br>2) Click on CCTV Mapping to click see CCTV Mapping Data & Back to Application to come back to main page.
-                              <br>3) On CCTV Mapping Page , select projects and click filter resutls to see results
-                              <br>4) When you do select the Vehicle ID after typing 0,1,8 & 9 & select the vehicle watch the reuslts and rejoice.
+                              <br>3) On CCTV Mapping Page , select projects and click filter results to see results
+                              <br>4) When you do select the Vehicle ID after typing 0,1,8 & 9 & select the vehicle watch the results and rejoice.
 
                               </span>
                             </div>
