--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-		<title>Baltimore Gov Repairs Department </title>
+		<title>Data Mechanic: Baltimore Fleet Management </title>
 
     <!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="assets/bootstrap/bootstrap4-alpha3.min.css">
@@ -245,7 +245,7 @@
                             </div>
                             <div class="modal-body">
                               <span style="color: #222222;">
-                              b>This App is developed for Department of General Services of Baltimore City Government and their fleet repair & management team.
+                              <b>This App is developed for Department of General Services of Baltimore City Government and their fleet repair & management team.
                               <p><br>
 				Use Case Information : The objective of the app is to help Baltimore City Department of General Services and the repair mechanics reduce comebacks, 
 				when the app detects that chances of comeback are high, they can perform an extra layer of 30$ check.
