--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                   popup.classList.toggle("show");
                 }
                 </script>
+		
+		<LINK REL="SHORTCUT ICON"
+       HREF="baltimoreicon.jpg">
   </head>
   <body>
 		<div class="container">
