--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
       <div class="row">
 				<div class="col-md-8">
-          <h3 id="vehicle_plot">Comeback vs Regular (Department)</h3>
+          <h3>Comeback vs Regular (Department):</h3><h3 id="vehicle_plot"></h3>
         </div>
         <div class="col-md-4">
           <span style="float:right">
